session and cookie

--- a/lib/public/404.html
+++ b/lib/public/404.html
@@ -11,7 +11,7 @@
     $(() => {
       var socket = io()
 
-      socket.emit('msg', {msg: 'Hello!'})
+      socket.emit('404', {msg: 'Page not found!'})
     })
   </script>
 </head>
