--- a/lib/public/404.html
+++ b/lib/public/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>WELCOME!</title>
+  <title>404</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -16,6 +16,6 @@
   </script>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Error 404 - Page Not Found</h1>
 </body>
 </html>
